--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
     "APP_ID":{
       "description": "your app id, take it from my.telegram.org",
-      "value": ""
+      "value": 16818625
     },
     "API_HASH":{
       "description": "your api hash, take it from my.telegram.org",
@@ -63,7 +63,7 @@
   "formation": {
     "worker": {
       "quantity": 1,
-      "size": "free"
+      "size": "basic"
     }
   }
 }
